# homework_6.1

./: README.md  pyproject.toml
src/: index.html  web_app.py
