[tool.poetry]
name = "homework-6-1"
version = "0.1.0"
description = ""
authors = ["kirill <oreshchuk.kirill@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_6"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
